<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.core.widget.NestedScrollView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/containerLogo"
                    android:gravity="center"
                    android:orientation="vertical">

<!--                    <ImageView-->
<!--                        android:layout_width="320dp"-->
<!--                        android:layout_height="150dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:contentDescription="Logo" />-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/welcome"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        />

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/correoLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/containerLogo"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/email_or_phone"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleTint="#FFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPass"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_below="@+id/correoLayout"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:hint="@string/password"
                        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
                        android:inputType="textPassword"
                        android:minEms="8"
                        android:textSize="18sp"
                        app:passwordToggleEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/textInputPass"
                    android:id="@+id/containerButton"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_height="wrap_content">


                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btnAction"
                        android:layout_marginStart="58dp"
                        android:layout_marginEnd="58dp"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        style="@style/ButtonExtendSecond"
                        android:textAllCaps="false"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/containerText"
                    android:layout_below="@+id/containerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingBottom="3dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textAlignment="center"
                        android:textSize="21sp"
                        android:textColor="@color/colorPrimary"
                        />


                    <TextView
                        android:paddingBottom="3dp"
                        android:id="@+id/goToRegister"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:textStyle="bold|italic"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        />

                </LinearLayout>


                <TextView
                    android:id="@+id/resetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/containerText"
                    android:layout_marginTop="25dp"
                    android:text="@string/resetPassLogin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="21sp" />




            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>